2013-04-15  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* benchtests/Makefile (bench): Write all output to
	bench-out.tmp together.

2013-04-15  Andreas Schwab  <schwab@suse.de>

	* nscd/nscd.c (main): Don't fork again after closing files.

2013-04-15  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* libio/tst-fwrite-error.c (do_test): Fix BUF array definition.

	* benchtests/Rules (bench-deps): Collect dependencies into a
	single variable.  Add Makefile to dependencies.
	($(objpfx)bench-%.c): Depend on bench-deps.

2013-04-12  Roland McGrath  <roland@hack.frob.com>
	    Xavier Roche  <roche+kml2@exalead.com>

	[BZ #15361]
	* sysdeps/pthread/aio_fsync.c (aio_fsync): Don't check open modes,
	just that it's a file descriptor.
	* manual/llio.texi (Synchronizing AIO Operations): Update description
	for EBADF error from aio_fsync.

2013-04-12  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* Rules (bench): Move target definition...
	* benchtests/Makefile: ... here.

2013-04-11  Carlos O'Donell  <carlos@redhat.com>

	* math/libm-test.inc (cos_test): Fix PI/2 test.
	(sincos_test): Likewise.
	* sysdeps/x86_64/fpu/libm-test-ulps: Regenerate.
	* sysdeps/i386/fpu/libm-test-ulps: Regenerate.

2013-04-11  Andreas Schwab  <schwab@suse.de>

	[BZ #13988]
	* stdio-common/vfscanf.c (_IO_vfwscanf): When parsing a float
	accept exponent character only when digits were seen.
	* stdio-common/Makefile (tests): Add bug26.
	* stdio-common/bug26.c: New file.

	[BZ #14293]
	* elf/dl-load.c (_dl_init_paths): Mark decomposed RUNPATH as
	non-freeable.

2013-04-11  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* Makeconfig (rtld-prefix): Define built linker prefix.
	* Rules (run-bench): Use it.
	* math/Makefile (run-regen-ulps): Likewise.

	* Rules (bench): Remove eval.

2013-04-10  Siddhesh Poyarekar  <siddhesh@redhat.com>
	    Roland McGrath  <roland@hack.frob.com>
	    Ondrej Bilka  <neleai@seznam.cz>

	[BZ #15346]
	* time/getdate.c: Include ctype.h and alloca.h.